test/arrays/ferguson/return-array-as-int.good
return-array-as-int.chpl:7: In method 'setRowNames':
return-array-as-int.chpl:8: error: cannot return '[domain(1,int(64),false)] int(64)' when the declared return type is 'int(64)'
  return-array-as-int.chpl:12: called as NamedMatrix.setRowNames(rn: [domain(1,int(64),false)] string)
